Bug 1272877 - Allow access to derived Image classes; r=sotaro

MozReview-Commit-ID: 3fXjwaDN5KV